# saxs-decosmic

./: .gitignore  README.md  main.py  pyproject.toml  requirement.txt  requirements.txt  setup.py
decosmic/models/: data_model.py  image_model.py  params_model.py
docs/: programming_rules.md
notebook/: example.ipynb
scripts/: gui.py  plot.py  process.py
src/decosmic/: __main__.py  main.py
src/decosmic/cli/: __init__.py  __main__.py  main.py
src/decosmic/core/: __init__.py  image_processor.py  image_series.py  processing_params.py  series_processor.py
src/decosmic/gui/: __init__.py  __main__.py  main.py
src/decosmic/gui/controllers/: __init__.py  main_controller.py
src/decosmic/gui/models/: __init__.py  processing_model.py
src/decosmic/gui/views/: main_view.py
src/decosmic/web/: __init__.py  __main__.py
src/decosmic/web/backend/routers/: api.py
src/decosmic/web/backend/services/: filesystem_service.py  processor_service.py
src/saxs_decosmic/core/: image_series.py  series_processor.py  single_processor.py
src/xrd_decosmic/: main.py
src/xrd_decosmic/cli/: __init__.py  __main__.py  main.py  test.py
src/xrd_decosmic/core/: ImageProcessor.py  ImageSeries.py  ProcessingParams.py  SeriesProcessor.py  __init__.py  image_series.py  series_processor.py  single_processor.py
src/xrd_decosmic/gui/: README.md  main.py
src/xrd_decosmic/gui/controller/: MainController.py
src/xrd_decosmic/gui/model/: ProcessingModel.py
src/xrd_decosmic/gui/view/: MainView.py  PlotView.py  __init__.py
src/xrd_decosmic/models/: data_model.py  image_model.py  progress_model.py
src/xrd_decosmic/ui/: main_window.ui  main_window_ui.py
src/xrd_decosmic/web/backend/: app.py
src/xrd_decosmic/web/frontend/: package-lock.json  package.json  vite.config.ts
(+8 files in other folders)
