[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "saxs-decosmic"
version = "1.4.0"
description = "High energy background removal from SAXS 2d image"
authors = [
    { name = "Tianyi Cao", email = "ctyjackcao@outlook.com" }
]
dependencies = [
    "fabio",
    "numpy",
    "scipy",
    "tqdm",
    "tifffile",
    "pyside6>=6.9.1",
    "matplotlib>=3.10.5",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[tool.hatch.build.targets.wheel]
packages = ["src/saxs_decosmic"]

[dependency-groups]
dev = [
    "pyinstaller>=6.15.0",
]
